# ntn-digital-twin

./: README.md  pyproject.toml
ntn_digital_twin/: __init__.py  twin_loop.py
ntn_digital_twin/api/: __init__.py  schemas.py  server.py
systemd/: ntn-twin-api.service  ntn-twin.service
tests/: test_twin_loop.py
viewer-patches/: index.html.patch
